--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas==2.1.4
 Pillow==9.4.0
 pycodestyle==2.10.0
 pygame==2.5.2
+pyperclip==1.8.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 six==1.16.0
