Added starting code for Quizzler project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "pygame"
+        "borderwidth",
+        "columnspan",
+        "pygame",
+        "rbtn"
     ]
 }
