--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
+aiohttp==3.9.1
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+attrs==23.2.0
 autopep8==2.0.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
 colorgram.py==1.2.0
+frozenlist==1.4.1
+geographiclib==2.0
+geopy==2.4.1
 idna==3.6
+multidict==6.0.4
 numpy==1.26.3
 pandas==2.1.4
 Pillow==9.4.0
 pycodestyle==2.10.0
 pygame==2.5.2
+PyJWT==2.8.0
 pyperclip==1.8.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
+twilio==8.12.0
 tzdata==2023.4
 urllib3==2.1.0
+yarl==1.9.4
