--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,18 @@ aiohttp-retry==2.8.3
 aiosignal==1.3.1
 attrs==23.2.0
 autopep8==2.0.1
+Babel==2.14.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 colorgram.py==1.2.0
 frozenlist==1.4.1
 geographiclib==2.0
 geopy==2.4.1
+html5lib==1.1
 idna==3.6
+lxml==5.1.0
 multidict==6.0.4
 numpy==1.26.3
 pandas==2.1.4
@@ -23,7 +28,10 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
+soupsieve==2.5
+tkcalendar==1.6.1
 twilio==8.12.0
 tzdata==2023.4
 urllib3==2.1.0
+webencodings==0.5.1
 yarl==1.9.4
