--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,11 @@ pyperclip==1.8.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
 six==1.16.0
 soupsieve==2.5
+spotipy==2.23.0
 tkcalendar==1.6.1
 twilio==8.12.0
 tzdata==2023.4
