--- a/requirements.txt
+++ b/requirements.txt
@@ -7,33 +7,45 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 colorgram.py==1.2.0
 frozenlist==1.4.1
 geographiclib==2.0
 geopy==2.4.1
+h11==0.14.0
 html5lib==1.1
 idna==3.6
 lxml==5.1.0
 multidict==6.0.4
 numpy==1.26.3
+outcome==1.3.0.post0
 pandas==2.1.4
 Pillow==9.4.0
 pycodestyle==2.10.0
+pycparser==2.21
 pygame==2.5.2
 PyJWT==2.8.0
 pyperclip==1.8.2
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 redis==5.0.1
 requests==2.31.0
+selenium==4.17.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 spotipy==2.23.0
 tkcalendar==1.6.1
+trio==0.24.0
+trio-websocket==0.11.1
 twilio==8.12.0
+typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
 webencodings==0.5.1
+wsproto==1.2.0
 yarl==1.9.4
