--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp>=3.9.2
+aiohttp==3.9.3
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 attrs==23.2.0
@@ -13,7 +13,10 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 colorgram.py==1.2.0
+dnspython==2.6.1
+email_validator==2.1.1
 Flask==3.0.2
+Flask-WTF==1.2.1
 frozenlist==1.4.1
 geographiclib==2.0
 geopy==2.4.1
@@ -28,7 +31,7 @@ multidict==6.0.4
 numpy==1.26.3
 outcome==1.3.0.post0
 pandas==2.1.4
-Pillow>=10.2.0
+pillow==10.2.0
 pycodestyle==2.10.0
 pycparser==2.21
 pygame==2.5.2
@@ -56,4 +59,5 @@ urllib3==2.1.0
 webencodings==0.5.1
 Werkzeug==3.0.1
 wsproto==1.2.0
+WTForms==3.1.2
 yarl==1.9.4
