--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ colorgram.py==1.2.0
 dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 frozenlist==1.4.1
 geographiclib==2.0
 geopy==2.4.1
+greenlet==3.0.3
 h11==0.14.0
 html5lib==1.1
 idna==3.6
@@ -50,6 +52,7 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 spotipy==2.23.0
+SQLAlchemy==2.0.28
 tkcalendar==1.6.1
 trio==0.24.0
 trio-websocket==0.11.1
