--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.3
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
+alembic==1.13.1
 attrs==23.2.0
 autopep8==2.0.1
 Babel==2.14.0
@@ -17,6 +18,8 @@ colorgram.py==1.2.0
 dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
+Flask-CKEditor==0.5.1
+Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 frozenlist==1.4.1
@@ -29,6 +32,7 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 lxml==5.1.0
+Mako==1.3.2
 MarkupSafe==2.1.5
 multidict==6.0.4
 numpy==1.26.3
