--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
 Flask-CKEditor==0.5.1
+Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
