--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ dnspython==2.6.1
 email_validator==2.1.1
 Flask==3.0.2
 Flask-CKEditor==0.5.1
+Flask-Gravatar==0.5.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
@@ -27,6 +28,7 @@ frozenlist==1.4.1
 geographiclib==2.0
 geopy==2.4.1
 greenlet==3.0.3
+gunicorn==21.2.0
 h11==0.14.0
 html5lib==1.1
 idna==3.6
@@ -38,8 +40,10 @@ MarkupSafe==2.1.5
 multidict==6.0.4
 numpy==1.26.3
 outcome==1.3.0.post0
+packaging==24.0
 pandas==2.1.4
 pillow==10.2.0
+psycopg2-binary==2.9.9
 pycodestyle==2.10.0
 pycparser==2.21
 pygame==2.5.2
