--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.3
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 alembic==1.13.1
+asttokens==2.4.1
 attrs==23.2.0
 autopep8==2.0.1
 Babel==2.14.0
@@ -15,8 +16,12 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 colorgram.py==1.2.0
+comm==0.2.2
+debugpy==1.8.1
+decorator==5.1.1
 dnspython==2.6.1
 email_validator==2.1.1
+executing==2.0.1
 Flask==3.0.2
 Flask-CKEditor==0.5.1
 Flask-Gravatar==0.5.0
@@ -32,27 +37,42 @@ gunicorn==21.2.0
 h11==0.14.0
 html5lib==1.1
 idna==3.6
+ipykernel==6.29.3
+ipython==8.22.2
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.3
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 lxml==5.1.0
 Mako==1.3.2
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
 multidict==6.0.4
+nest-asyncio==1.6.0
 numpy==1.26.3
 outcome==1.3.0.post0
 packaging==24.0
 pandas==2.1.4
+parso==0.8.3
 pillow==10.2.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
 psycopg2-binary==2.9.9
+pure-eval==0.2.2
 pycodestyle==2.10.0
 pycparser==2.21
 pygame==2.5.2
+Pygments==2.17.2
 PyJWT==2.8.0
 pyperclip==1.8.2
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+pywin32==306
+pyzmq==25.1.2
 redis==5.0.1
 requests==2.31.0
 selenium==4.17.2
@@ -62,13 +82,17 @@ sortedcontainers==2.4.0
 soupsieve==2.5
 spotipy==2.23.0
 SQLAlchemy==2.0.28
+stack-data==0.6.3
 tkcalendar==1.6.1
+tornado==6.4
+traitlets==5.14.2
 trio==0.24.0
 trio-websocket==0.11.1
 twilio==8.12.0
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
+wcwidth==0.2.13
 webencodings==0.5.1
 Werkzeug==3.0.1
 wsproto==1.2.0
