--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,7 @@ packaging==24.0
 pandas==2.1.4
 pandocfilters==1.5.1
 parso==0.8.3
+patsy==0.5.6
 pillow==10.2.0
 platformdirs==4.2.0
 plotly==5.20.0
@@ -136,6 +137,7 @@ soupsieve==2.5
 spotipy==2.23.0
 SQLAlchemy==2.0.28
 stack-data==0.6.3
+statsmodels==0.14.1
 tenacity==8.2.3
 terminado==0.18.1
 threadpoolctl==3.4.0
